app/assets/sass/_custom.scss
/* ... */
  
  @media (max-width: 1000px) {
	.hmpps-actions-block__list li img {
	  display: none;
	}
  }
  .hmpps-actions-block__list li a {
	font-weight: 700;
  }
  
  @media (max-width: 1000px) {
	.hmpps-actions-block__list li a {
	  font-size: 16px;
	}
  }
  .hmpps-actions-block__list li:not(:last-of-type) {
	border-bottom: 1px solid #b1b4b6;
  }



  .card-ben-body {
	td, th, p, li, h2 {
	
		&.corLayout {

			font-weight: bold;
			margin: 0;
			padding: 20px 0 14px 0;
			border-bottom: 1px solid govuk-colour("mid-grey");
			color: #000;
			&:first-child {
				//border: 0;
				padding-top: 8px;
			}
			span {
				font-size: 2rem!important;
				font-weight: normal;
				display: block;
				color: govuk-colour("dark-grey");
				padding-bottom: 3px;
			}
			date {
				font-size: 1.1rem!important;
				font-weight: normal;
				position: relative;
				padding: 0;
				left: -3px;
				top: -1px;
				//display: block;
				
			}
			
			strong {
				position: relative;
				top: -2px;
				font-size: .8rem;
				margin-left: 2px;
			}
		}
	}
	span {
		font-size: .8rem!important;
		&.fontFix {
			font-size: .9rem!important;
		}
	}
	.govuk-button {
		font-size: 1rem!important;
	}
}

.assessment-score {
	background-color: #f3f2f1;
	padding: 20px;
}

.phoebe-accordion-header {
	font-size: 24px!important;
	font-weight: 100!important;
	display: flex;
	align-items: center;
	row-gap: 10px;
	column-gap: 10px;
	padding-top: 25px!important;
}

.phoebe-accordion-tags {
	margin-right: auto;
}

.phoebe-accordion-header-no-risk {
	font-size: 24px!important;
	font-weight: 100!important;
	display: flex;
	justify-content: space-between;
	padding-top: 25px!important;
}

.govuk-select {
	min-width: auto;
}

.app-htmlformrow {
	.govuk-form-group {
		 margin-bottom: 1rem; //this is hacky. Add a media query
	 }
}

#toggleDiv {
	display: none;
}


.landing-card {
	height: 150px;
  }
  
  .landing-heading {
	margin-bottom: 20px;

  }

.goal-list {
	li {
		&::marker {
			font-weight: bold;
		}

		.govuk-summary-card {
			margin-left: govuk-spacing(2);
		}
	}
}

